# usb

ProjectToBuild/: CMakeLists.txt
ProjectToBuild/Drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
ProjectToBuild/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: CMakeLists.txt
ProjectToBuild/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: CMakeLists.txt
ProjectToBuild/documentation/: CMakeLists.txt
ProjectToBuild/documentation/doxygen/: README.md
ProjectToBuild/documentation/sphinx/: apendix.rst  cmake_template.rst  conf.py  general_description.rst  introduction.rst  requirements.rst  review.rst  system_description.rst  test_plan.rst
ProjectToBuild/documentation/sphinx/tables/: review.csv  trazability_general_matrix.csv
ProjectToBuild/inc/: main.h  stm32f4xx_it.h  usbd_cdc_if.h
ProjectToBuild/src/: CMakeLists.txt  gpio.c  main.c  syscall.c  tim.c  usbd_cdc_if.c
ProjectToBuild/tools/cmake/: linux-gnueabi.cmake
STCubeMX_USB/: .mxproject  Makefile  USB3.ioc
STCubeMX_USB/Src/: stm32f4xx_it.c  usart.c
